everything up to the chapter 6.

--- a/MyCodeCamp/appsettings.json
+++ b/MyCodeCamp/appsettings.json
@@ -7,12 +7,14 @@
 		"IncludeScopes": false,
 		"Debug": {
 			"LogLevel": {
-				"Default": "Warning"
+				"MyCodeCamp": "Debug",
+
+				"Default": "Error"
 			}
 		},
 		"Console": {
 			"LogLevel": {
-				"Default": "Warning"
+				"Default": "Information"
 			}
 		}
 	}
